--- a/particle.css
+++ b/particle.css
@@ -10,7 +10,7 @@ body {
   #particles-js {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: transparent;
     background-image: url("");
     background-repeat: no-repeat;
