--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/assets-back.jpg") top right no-repeat;
+  background: url("../img/bg-final.png") top right no-repeat;
   background-size: cover;
   position: relative;
 }
